// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <CustomInputCheckbox /> should renders with all props correctly 1`] = `
<div
  className="wrap-fcustominp"
>
  <div
    className="fcustominp"
  >
    <input
      checked={true}
      id=""
      name="test-name"
      type="checkbox"
      value={true}
    />
    <label
      htmlFor="test-name"
    />
  </div>
  <label
    className="fcustominp-label"
    htmlFor="test-name"
  >
    Test label
  </label>
</div>
`;

exports[`Component <CustomInputCheckbox /> should renders without label prop correctly 1`] = `
<div
  className="wrap-fcustominp"
>
  <div
    className="fcustominp"
  >
    <input
      checked={true}
      id=""
      name="test-name"
      type="checkbox"
      value={true}
    />
    <label
      htmlFor="test-name"
    />
  </div>
</div>
`;
